# micromagnetictests

./: .coveragerc  .pre-commit-config.yaml  Makefile  README.md  appveyor.yml  pyproject.toml  pytest.ini  setup.cfg  setup.py  tasks.py
.github/: environment.yml
.github/workflows/: publish.yml  workflow.yml
binder/: environment.yml
docker/: Dockerfile
docs/: api-reference.rst  conf.py  get_tests.rst  index.ipynb  index.rst  tutorials.rst  usage.ipynb
docs/ipynb/: index.ipynb  installation-testing-update.ipynb  other.ipynb  tutorial-installation-testing-upgrade.ipynb  tutorial-using-micromagnetictests.ipynb  usage.ipynb
micromagnetictests/: __init__.py  cubicanisotropy.py  demag.py  get_tests.py  mesh.py  multiple_drives.py  run.py  test_compute.py  test_damping.py  test_dmi.py  test_exchange.py  test_magnetoelastic.py  test_mindriver.py  test_precession.py  test_slonczewski.py  test_stdprob3.py  test_stdprob4.py  test_stdprob5.py  test_zeeman.py  test_zhangli.py
micromagnetictests/calculatortests/: __init__.py  compute.py  cubicanisotropy.py  damping.py  demag.py  dirname.py  dmi.py  dynamics.py  energy.py  exchange.py  fixedsubregions.py  hysteresisdriver.py  info_file.py  mesh.py  mindriver.py  multiple_drives.py  outputformat.py  outputstep.py  precession.py  relaxdriver.py  rkky.py  save_delete.py  schedule.py  skyrmion.py  slonczewski.py  stdprob3.py  stdprob4.py  stdprob5.py  test_timedriver.py  threads.py  timedriver.py  uniaxialanisotropy.py  zeeman.py  zhangli.py
micromagnetictests/tests/: test_get_tests.py  test_init.py  test_micromagnetictests.py
